--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,28 +1,156 @@
-<!-- build:title -->Narrowboats and Canals. A Personal History of Narrowboat Dvbris<!-- /build:title -->
-<!-- build:header -->Narrowboats and Canals<!-- /build:header -->
+<!-- build:title -->
+
+<!-- /build:title -->
+
+<!-- build:header -->
+<td align="left" valign="top">
+    <table width="600" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+        <tbody>
+            <tr>
+                <td height="18" align="left" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:20px; color:#595a5d; padding-top:10px; padding-bottom:10px; padding-left:27px; vertical-align:middle; " class="CenterText"><b>The best entertainment lineup this fall is on STARZ<sup style="font-size:11px; line-height:5px; vertical-align:5px;">&reg;</sup></b></td>
+            </tr>
+            <tr>
+                <td align="left" valign="top">
+                    <table width="600" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                        <tbody>
+                            <tr>
+                                <td width="94" height="122" align="left" valign="middle" style="vertical-align:middle;">
+                                    <table width="94" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                                        <tbody>
+                                            <tr>
+                                                <td width="94" height="122" align="left" valign="middle" style="vertical-align:middle; padding-left:26px;" class="nopadding">
+                                                    <a href="http://www.verizon.com/?CMP=" target="_blank"><img src="images/Starz_R8_img7.png" width="68" height="43" border="0" alt="Fios by verizon" style="display:block;" /></a>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td width="115" height="122" align="left" valign="middle" style="vertical-align:middle;" class="NotTD">
+                                    <table width="115" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td width="115" height="122" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:20px; color:#333333; vertical-align:middle;" class="NotTD"><a href="https://www.verizon.com/foryourhome/MyAccount/ngen/upr/nlogin.aspx?LOBCode=C&PromoTCode=MZV07&PromoSrcCode=V&POEId=VU1SP&CMP=" target="_blank" style="color:#333333; text-decoration:none;"><span style="color:#333333 !important; text-decoration:none;">My Verizon</span></a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td width="104" height="122" align="left" valign="middle" style="vertical-align:middle;" class="NotTD">
+                                    <table width="104" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td width="104" height="122" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:20px; color:#333333; vertical-align:middle;" class="NotTD"><a href="http://www.verizon.com/support/residential/index.htm?CMP=" target="_blank" style="color:#333333; text-decoration:none;"><span style="color:#333333 !important; text-decoration:none;">Support</span></a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td width="144" height="122" align="left" valign="middle" style="vertical-align:middle;" class="NotTD">
+                                    <table width="144" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td width="144" height="122" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height:20px; color:#333333; vertical-align:middle;" class="NotTD"><a href="http://www.verizon.com/home/MLP/myrewards.html?CMP=" target="_blank" style="color:#333333;text-decoration: none;"><span style="color: #333333 !important; text-decoration: none;">My Rewards+</span></a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                                <td width="143" height="122" align="right" valign="middle" style="vertical-align:middle;">
+                                    <table width="143" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td width="143" height="122" align="right" valign="middle" style="font-family:Arial, Helvetica, sans-serif; font-size:12px; line-height:16px; color:#333333; vertical-align:middle; padding-right:28px;" class="nopadding"><a href="#" target="_blank" style="color:#0066CC; text-decoration:none;"><span style="color:#0066cc !important; text-decoration:none;">View Online</span></a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</td>
+<!-- /build:header -->
+
 <!-- build:content -->
-<p>If you have any interest whatsoever about British Canals and narrowboats, then this site is a must for you.</p>
-<p>This site contains a brief history and a selection of photographs about our narrowboat Dvbris. Also you will find some links to other sites on the Internet.</p>
-<p>To continue click <a href="about.html">here.</a></p>
-<p align="center"><img src="images/Boat.JPG" border="2" style="max-width:100%"></p>
+
 <!-- /build:content -->
+
 <!-- build:footer -->
-<table width="100%" height="94" align="center" bgcolor="#f0f0f0">
-  <tr>
-    <td colspan="5"><div align="center" style="padding:10px"><b>
-        The UK Canals Web-Ring<br>
-        This site is owned by<br>
-        <font size="2">NB Dvbris Owners</font></b></div></td>
-  </tr>
-  <tr>
-    <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=prev&siteid=37439" target="_blank">Previous Site</a></div></td>
-    <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=list&siteid=37439" target="_blank">List Sites</a></div></td>
-    <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=random&siteid=37439" target="_blank">Random Site</a></div></td>
-    <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=join&siteid=37439" target="_blank">Join Ring</a></div></td>
-    <td width="20%"><div align="center"><a href="http://pub41.bravenet.com/sitering/nav.php?usernum=3463023835&action=next&siteid=37439" target="_blank">Next Site</a></div></td>
-  </tr>
-  <tr>
-    <td colspan="5"><div align="center"><img src="images/narrwbt2.gif" width="113" height="30"></div></td>
-  </tr>
-</table>
+<td align="left" valign="top">
+    <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" class="FullWidth">
+        <tbody>
+            <tr>
+                <td align="center" valign="top" style="padding-top:15px;" class="nopadding">
+                    <table width="197" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                        <tbody>
+                            <tr>
+                                <td align="center" valign="top" class="CenterImage">
+                                    <table width="197" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                            <tr>
+                                                <td align="left" valign="top">
+                                                    <a href="http://www.facebook.com/VerizonFiOS?CMP=" target="_blank"><img src="images/FCE15788_Starz_R_cuts_66.gif" width="49" height="42" alt="Facebook" title="Facebook" border="0" style="display: block;" /></a>
+                                                </td>
+                                                <td align="left" valign="top">
+                                                    <a href="https://twitter.com/verizonfios?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_67.gif" width="49" height="42" alt="Twitter" title="Twitter" border="0" style="display:block;" /></a>
+                                                </td>
+                                                <td align="left" valign="top">
+                                                    <a href="https://plus.google.com/+verizonfios/posts?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_68.gif" width="50" height="42" alt="Google+" title="Google+" border="0" style="display: block;" /></a>
+                                                </td>
+                                                <td align="left" valign="top">
+                                                    <a href="http://www.youtube.com/user/verizon?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_69.gif" width="49" height="42" alt="YouTube" title="YouTube" border="0" style="display: block;" /></a>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td align="left" valign="top" style="padding-top:52px;" class="nopadding">
+                    <table width="600" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                        <tbody>
+                            <tr>
+                                <td width="130" align="left" valign="top" style="background-color: #ffffff; color: #333333 !important; font-family: Arial, Helvetica, sans-serif; font-size: 18px; line-height: 22px; padding-left:25px;" class="responsiveCell">Quick Links:</td>
+                                <td align="left" valign="middle" style="vertical-align:middle;" class="responsiveCell">
+                                    <table width="470" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                                        <tbody>
+                                            <tr>
+                                                <td width="470" align="left" valign="middle" style="color: #333333 !important; font-family: Arial, sans-serif; font-size: 13px; line-height: 17px; padding-left:12px; vertical-align:middle;" class="footerLinks"><a href="https://www.verizon.com/foryourhome/MyAccount/ngen/upr/nlogin.aspx?LOBCode=C&PromoTCode=MZV07&PromoSrcCode=V&POEId=VU1SP&CMP=" target="_blank" style="color: #0066cc; outline: 0; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">My&nbsp;Verizon</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="http://www.verizon.com/support/residential/index.htm?CMP=" target="_blank" style="color: #0066cc; outline: 0; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">Support</span></a>&nbsp;&nbsp;<span>|</span>&nbsp; <a href="http://www.verizon.com/foryourhome/myaccount/ngen/upr/nlogin.aspx?CMP=" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">Update&nbsp;Email</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="#" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">View&nbsp;Online</span></a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td valign="top" bgcolor="#ffffff" style="width: 560px; font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 14px; color: #959595; background-color: #ffffff; padding: 25px;">ADVERTISEMENT
+                    <br />
+                    <br /> Limited time offer for new premium movie package customers only. Customers with existing premium channel package promotions may only receive discount for the remainder of the original term of the existing promotion which may be less than six months. Discount applied via bill credits for promotional period (up to six months); beginning the first month after the promotional period ends, standard programming rates apply. Additional promotion eligibility rules may apply. Equipment and other charges, taxes and terms apply.
+                    <br />
+                    <br /> *To be eligible for My Rewards+, a customer must have High Speed Internet or FiOS&reg; Internet and/or FiOS&reg; TV and must have a My Verizon account. The My Rewards+ program is subject to its Terms and Conditions.
+                    <br />
+                    <br /> STARZ and related channels and service marks are the property of Starz Entertainment, LLC. Visit <a class="footerLink" href="http://www.starz.com" target="_blank" style="color:#959595 !important; text-decoration:none !important;"><span style="color:#959595; text-decoration:none;">starz.com</span></a> and <a href="http://www.encoretv.com" target="_blank" style="color:#959595 !important; text-decoration:none !important;"><span style="color:#959595; text-decoration:none;">encoretv.com</span></a> for airdates/times. STARZ Play and ENCORE Play are only accessible in the U.S. and certain U.S. territories and require a high-speed broadband connection (a minimum 3G connection is required to use on an authorized mobile device). The Play service are included with a subscription through participating cable, satellite and telco television providers.
+                    <br />
+                    <br /> Ash vs. Evil Dead &copy; 2015 Starz Entertainment, LLC. All Rights Reserved. <i>Da Vinci's Demons</i> &copy; 2015 DVDS3 Limited. All Rights Reserved." <i>Flesh and Bone</i> &copy; 2015 Starz Entertainment, LLC. All Rights Reserved.
+                    <br />
+                    <br /> Verizon is dedicated to protecting your privacy. <a href="http://www.verizon.com/privacy/?CMP=EMC-CON_2015-Q4_MM-NA-eCRMTXIDFCE15788a_0012" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">Privacy Policy</span></a>.
+                    <br />
+                    <br /> Please do not reply to this email as this mailbox is not monitored. You may <a href="https://econtact.verizon.com/ecrm/unsubscribe.serv?CMP=EMC-CON_2015-Q4_MM-NA-eCRMTXIDFCE15788a_0012" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">unsubscribe</span></a> from Verizon promotional emails at any time. Please allow up to 10 business days for Verizon to process your opt-out request.
+                    <br />
+                    <br /> &copy;&nbsp;2015 Verizon. All rights reserved.
+                    <br>
+                    <a style="color: #959595; background-color: #ffffff; text-decoration: none;" target="_blank" class="appleLinkGray"><span style="color: #959595 !important; background-color: #ffffff; text-decoration: none;" class="appleLinkGray">Verizon Services Corp | One Verizon Way | Basking Ridge, NJ 07920</span></a>
+                    <br>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</td>
 <!-- /build:footer -->
