added default styles for emails and changed footer content

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -130,24 +130,12 @@
                 </td>
             </tr>
             <tr>
-                <td valign="top" bgcolor="#ffffff" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 14px; color: #959595; background-color: #ffffff; padding: 25px;">ADVERTISEMENT
-                    <br />
-                    <br /> Limited time offer for new premium movie package customers only. Customers with existing premium channel package promotions may only receive discount for the remainder of the original term of the existing promotion which may be less than six months. Discount applied via bill credits for promotional period (up to six months); beginning the first month after the promotional period ends, standard programming rates apply. Additional promotion eligibility rules may apply. Equipment and other charges, taxes and terms apply.
-                    <br />
-                    <br /> *To be eligible for My Rewards+, a customer must have High Speed Internet or FiOS&reg; Internet and/or FiOS&reg; TV and must have a My Verizon account. The My Rewards+ program is subject to its Terms and Conditions.
-                    <br />
-                    <br /> STARZ and related channels and service marks are the property of Starz Entertainment, LLC. Visit <a class="footerLink" href="http://www.starz.com" target="_blank" style="color:#959595 !important; text-decoration:none !important;"><span style="color:#959595; text-decoration:none;">starz.com</span></a> and <a href="http://www.encoretv.com" target="_blank" style="color:#959595 !important; text-decoration:none !important;"><span style="color:#959595; text-decoration:none;">encoretv.com</span></a> for airdates/times. STARZ Play and ENCORE Play are only accessible in the U.S. and certain U.S. territories and require a high-speed broadband connection (a minimum 3G connection is required to use on an authorized mobile device). The Play service are included with a subscription through participating cable, satellite and telco television providers.
-                    <br />
-                    <br /> Ash vs. Evil Dead &copy; 2015 Starz Entertainment, LLC. All Rights Reserved. <i>Da Vinci's Demons</i> &copy; 2015 DVDS3 Limited. All Rights Reserved." <i>Flesh and Bone</i> &copy; 2015 Starz Entertainment, LLC. All Rights Reserved.
-                    <br />
-                    <br /> Verizon is dedicated to protecting your privacy. <a href="http://www.verizon.com/privacy/?CMP=EMC-CON_2015-Q4_MM-NA-eCRMTXIDFCE15788a_0012" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">Privacy Policy</span></a>.
-                    <br />
-                    <br /> Please do not reply to this email as this mailbox is not monitored. You may <a href="https://econtact.verizon.com/ecrm/unsubscribe.serv?CMP=EMC-CON_2015-Q4_MM-NA-eCRMTXIDFCE15788a_0012" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">unsubscribe</span></a> from Verizon promotional emails at any time. Please allow up to 10 business days for Verizon to process your opt-out request.
+                <td valign="top" bgcolor="#ffffff" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 14px; color: #959595; background-color: #ffffff; padding: 25px;">
                     <br />
                     <br /> &copy;&nbsp;2015 Verizon. All rights reserved.
-                    <br>
+                    <br />
                     <a style="color: #959595; background-color: #ffffff; text-decoration: none;" target="_blank" class="appleLinkGray"><span style="color: #959595 !important; background-color: #ffffff; text-decoration: none;" class="appleLinkGray">Verizon Services Corp | One Verizon Way | Basking Ridge, NJ 07920</span></a>
-                    <br>
+                    <br />
                 </td>
             </tr>
         </tbody>
