--- a/src/content/index.html
+++ b/src/content/index.html
@@ -186,68 +186,73 @@
 
     <!-- build:footer -->
     <td align="left" valign="top">
-        <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" class="FullWidth">
-            <tbody>
+            <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" class="FullWidth">
+              <tbody>
                 <tr>
-                    <td align="center" valign="top" style="padding-top:25px;">
-                        <table width="197" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
-                            <tbody>
+                  <td align="center" valign="top" style="padding-top:35px;">
+                    <table width="197" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                      <tbody>
+                        <tr>
+                          <td align="center" valign="top" class="CenterImage">
+                            <table width="197" border="0" cellspacing="0" cellpadding="0">
+                              <tbody>
                                 <tr>
-                                    <td align="center" valign="top" class="CenterImage">
-                                        <table width="197" border="0" cellspacing="0" cellpadding="0">
-                                            <tbody>
-                                                <tr>
-                                                    <td align="left" valign="top">
-                                                        <a href="http://www.facebook.com/VerizonFiOS?CMP=" target="_blank"><img src="images/FCE15788_Starz_R_cuts_66.gif" width="49" height="42" alt="Facebook" title="Facebook" border="0" style="display: block;" /></a>
-                                                    </td>
-                                                    <td align="left" valign="top">
-                                                        <a href="https://twitter.com/verizonfios?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_67.gif" width="49" height="42" alt="Twitter" title="Twitter" border="0" style="display:block;" /></a>
-                                                    </td>
-                                                    <td align="left" valign="top">
-                                                        <a href="https://plus.google.com/+verizonfios/posts?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_68.gif" width="50" height="42" alt="Google+" title="Google+" border="0" style="display: block;" /></a>
-                                                    </td>
-                                                    <td align="left" valign="top">
-                                                        <a href="http://www.youtube.com/user/verizon?CMP=" target="_blank"> <img src="images/FCE15788_Starz_R_cuts_69.gif" width="49" height="42" alt="YouTube" title="YouTube" border="0" style="display: block;" /></a>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </td>
+                                  <td align="left" valign="top">
+                                    <a href="http://www.facebook.com/VerizonFiOS?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank"><img src="http://images-promo.verizon.com/ECRM/10-29-15-FQA-Speed/images/FCE15788_Starz_R_cuts_66.gif" width="49" height="42" alt="Facebook" title="Facebook" border="0" style="display: block;" /></a>
+                                  </td>
+                                  <td align="left" valign="top">
+                                    <a href="https://twitter.com/verizonfios?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank"> <img src="http://images-promo.verizon.com/ECRM/10-29-15-FQA-Speed/images/FCE15788_Starz_R_cuts_67.gif" width="49" height="42" alt="Twitter" title="Twitter" border="0" style="display:block;" /></a>
+                                  </td>
+                                  <td align="left" valign="top">
+                                    <a href="https://plus.google.com/+verizonfios/posts?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank"> <img src="http://images-promo.verizon.com/ECRM/10-29-15-FQA-Speed/images/FCE15788_Starz_R_cuts_68.gif" width="50" height="42" alt="Google+" title="Google+" border="0" style="display: block;" /></a>
+                                  </td>
+                                  <td align="left" valign="top">
+                                    <a href="http://www.youtube.com/user/verizon?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank"> <img src="http://images-promo.verizon.com/ECRM/10-29-15-FQA-Speed/images/FCE15788_Starz_R_cuts_69.gif" width="49" height="42" alt="YouTube" title="YouTube" border="0" style="display: block;" /></a>
+                                  </td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </td>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
                 </tr>
                 <tr>
-                    <td align="left" valign="top" style="padding-top:52px;">
-                        <table width="600" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
-                            <tbody>
+                  <td align="left" valign="top" style="padding-top:52px;">
+                    <table width="600" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                      <tbody>
+                        <tr>
+                          <td width="130" align="left" valign="top" style="background-color: #ffffff; color: #333333 !important; font-family: Arial, Helvetica, sans-serif; font-size: 18px; line-height: 22px; padding-left:25px;" class="responsiveCell">Quick Links:</td>
+                          <td align="left" valign="middle" style="vertical-align:middle;" class="responsiveCell">
+                            <table width="470" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
+                              <tbody>
                                 <tr>
-                                    <td width="130" align="left" valign="top" style="background-color: #ffffff; color: #333333 !important; font-family: Arial, Helvetica, sans-serif; font-size: 18px; line-height: 22px; padding-left:25px;" class="responsiveCell">Quick Links:</td>
-                                    <td align="left" valign="middle" style="vertical-align:middle;" class="responsiveCell">
-                                        <table width="470" border="0" cellspacing="0" cellpadding="0" class="FullWidth">
-                                            <tbody>
-                                                <tr>
-                                                    <td width="470" align="left" valign="middle" style="color: #333333 !important; font-family: Arial, sans-serif; font-size: 13px; line-height: 17px; padding-left:12px; vertical-align:middle;" class="footerLinks"><a href="https://www.verizon.com/foryourhome/MyAccount/ngen/upr/nlogin.aspx?LOBCode=C&PromoTCode=MZV07&PromoSrcCode=V&POEId=VU1SP&CMP=" target="_blank" style="color: #0066cc; outline: 0; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">My&nbsp;Verizon</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="http://www.verizon.com/support/residential/index.htm?CMP=" target="_blank" style="color: #0066cc; outline: 0; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">Support</span></a>&nbsp;&nbsp;<span>|</span>&nbsp; <a href="http://www.verizon.com/foryourhome/myaccount/ngen/upr/nlogin.aspx?CMP=" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">Update Email</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="#" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;" class="quick-link">View Online</span></a></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </td>
+                                  <td width="470" align="left" valign="middle" style="color: #333333 !important; font-family: Arial, sans-serif; font-size: 13px; line-height: 17px; padding-left:12px; vertical-align:middle;" class="footerLinks">
+                                    <a href="https://www.verizon.com/foryourhome/MyAccount/ngen/upr/nlogin.aspx?LOBCode=C&PromoTCode=MZV07&PromoSrcCode=V&POEId=VU1SP&CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank" style="color: #0066cc; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;">My&nbsp;Verizon</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="http://www.verizon.com/support/residential/index.htm?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank" style="color: #0066cc; outline: 0; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;">Support</span></a>&nbsp;&nbsp;<span>|</span>&nbsp; <a href="https://www.verizon.com/foryourhome/myaccount/ngen/upr/nlogin.aspx?CMP=EMC-CON_2014-Q3_MM-NA-eCRMTXIDFCE14213a_0779?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;">Update&nbsp;Email</span></a>&nbsp;&nbsp;<span>|</span>&nbsp;&nbsp;<a href="#" target="_blank" style="color: #0066CC; text-decoration: none;"><span style="color: #0066cc !important; text-decoration: none;">View&nbsp;Online</span></a></td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </td>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
                 </tr>
                 <tr>
-                    <td valign="top" bgcolor="#ffffff" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 14px; color: #959595; background-color: #ffffff; padding: 25px;">
-                        <br />
-                        <br /> &copy;&nbsp;2015 Verizon. All rights reserved.
-                        <br />
-                        <a style="color: #959595; background-color: #ffffff; text-decoration: none;" target="_blank" class="appleLinkGray"><span style="color: #959595 !important; background-color: #ffffff; text-decoration: none;" class="appleLinkGray">Verizon Services Corp | One Verizon Way | Basking Ridge, NJ 07920</span></a>
-                        <br />
-                    </td>
+                  <td valign="top" bgcolor="#ffffff" style="font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 14px; color: #959595; background-color: #ffffff; padding: 25px;">ADVERTISEMENT
+                    <br />
+                    <br />  Verizon is dedicated to protecting your privacy.
+                    <a href="http://www.verizon.com/privacy/?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">Privacy Policy</span></a>.
+                    <br />
+                    <br /> Please do not reply to this email as this mailbox is not monitored. You may
+                    <a href="https://econtact.verizon.com/ecrm/unsubscribe.serv?CMP=EMC-CON_2015-Q4_MM-NA-eCRIMTXIDFCE15842b_0054" target="_blank" style="color:#0066cc !important; text-decoration:none !important;"><span style="color:#0066cc; text-decoration:none;">unsubscribe</span></a> from Verizon promotional emails at any time. Please allow up to 10 business days for Verizon to process your opt-out request.
+                    <br />
+                    <br /> &copy;&nbsp;2015 Verizon. All Rights Reserved.
+                    <br /> <a style="color: #959595; background-color: #ffffff; text-decoration: none;" target="_blank" class="appleLinkGray"><span style="color: #959595 !important; background-color: #ffffff; text-decoration: none;" class="appleLinkGray">Verizon Services Corp | One Verizon Way | Basking Ridge, NJ 07920</span></a>
+                    <br /> </td>
                 </tr>
-            </tbody>
-        </table>
-    </td>
+              </tbody>
+            </table>
+          </td>
     <!-- /build:footer -->
